# toy-robot

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  codecov.yml
.github/workflows/: coverage.yml  lint.yml  macos.yml  ubuntu.yml  windows.yml
src/robot/: hello.cpp  hello.h  hello.test.cpp  main.cpp
tests/: CMakeLists.txt
